--- a/popup.html
+++ b/popup.html
@@ -2,24 +2,44 @@
 <html>
 <head>
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
-      width: 220px;
+      width: 320px;
       padding: 20px;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      text-align: center;
-      background-color: #ffffff;
-      color: #333;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: #fff;
+      margin: 0;
     }
-    h3 {
-      margin-top: 0;
-      margin-bottom: 15px;
-      font-size: 16px;
+    h2 {
+      margin: 0 0 20px 0;
+      font-size: 18px;
     }
     .switch-container {
       display: flex;
       align-items: center;
-      justify-content: center;
-      margin-bottom: 15px;
+      justify-content: space-between;
+      margin-bottom: 20px;
+      padding: 15px;
+      background: rgba(255,255,255,0.1);
+      border-radius: 8px;
+    }
+    .switch-info {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+    }
+    .status-text {
+      font-weight: bold;
+      font-size: 14px;
+    }
+    .status-text.active {
+      color: #4ade80;
+    }
+    .status-text.disabled {
+      color: #fbbf24;
     }
     
     /* Toggle Switch */
@@ -28,7 +48,6 @@
       display: inline-block;
       width: 50px;
       height: 26px;
-      margin-right: 10px;
     }
     .switch input {
       opacity: 0;
@@ -58,48 +77,189 @@
       border-radius: 50%;
     }
     input:checked + .slider {
-      background-color: #2196F3;
+      background-color: #4ade80;
     }
     input:focus + .slider {
-      box-shadow: 0 0 1px #2196F3;
+      box-shadow: 0 0 1px #4ade80;
     }
     input:checked + .slider:before {
       transform: translateX(24px);
     }
 
-    /* Status Text */
-    .status-text {
+    /* Stats Section */
+    .stats-container {
+      background: rgba(255,255,255,0.1);
+      border-radius: 8px;
+      padding: 15px;
+      margin-bottom: 15px;
+    }
+    .stat-row {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 10px;
+      font-size: 13px;
+    }
+    .stat-row:last-child {
+      margin-bottom: 0;
+    }
+    .stat-label {
+      opacity: 0.9;
+    }
+    .stat-value {
       font-weight: bold;
-      font-size: 14px;
+      color: #4ade80;
     }
-    .status-text.active {
-      color: #2196F3;
+
+    /* Blocking Level */
+    .level-container {
+      margin-bottom: 15px;
     }
-    .status-text.disabled {
-      color: #777;
+    .level-label {
+      font-size: 13px;
+      margin-bottom: 8px;
+      opacity: 0.9;
+    }
+    .level-select {
+      width: 100%;
+      padding: 8px;
+      border: 1px solid rgba(255,255,255,0.3);
+      border-radius: 5px;
+      background: rgba(255,255,255,0.1);
+      color: #fff;
+      font-size: 13px;
+      cursor: pointer;
+    }
+    .level-select option {
+      background: #333;
+      color: #fff;
+    }
+    .level-select:hover {
+      background: rgba(255,255,255,0.15);
+    }
+
+    /* Whitelist Button */
+    .whitelist-container {
+      margin-bottom: 15px;
+    }
+    .btn {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid rgba(255,255,255,0.3);
+      border-radius: 5px;
+      background: rgba(255,255,255,0.1);
+      color: #fff;
+      font-size: 13px;
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+    .btn:hover {
+      background: rgba(255,255,255,0.2);
+      border-color: rgba(255,255,255,0.5);
+    }
+    .btn-whitelist {
+      margin-bottom: 8px;
+    }
+    .btn-reset {
+      margin-bottom: 8px;
+    }
+    .btn-import {
+      margin-bottom: 8px;
+    }
+
+    /* Whitelist List */
+    .whitelist-list {
+      background: rgba(0,0,0,0.2);
+      border-radius: 5px;
+      padding: 10px;
+      font-size: 12px;
+      max-height: 100px;
+      overflow-y: auto;
+    }
+    .whitelist-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 5px;
+      margin-bottom: 5px;
+      background: rgba(255,255,255,0.1);
+      border-radius: 3px;
+    }
+    .whitelist-item:last-child {
+      margin-bottom: 0;
+    }
+    .remove-btn {
+      background: none;
+      border: none;
+      color: #ff6b6b;
+      cursor: pointer;
+      font-size: 12px;
+      padding: 0 5px;
+    }
+    .remove-btn:hover {
+      color: #ff8787;
     }
 
     .note {
       font-size: 11px;
-      color: #888;
-      margin-top: 15px;
-      border-top: 1px solid #eee;
+      opacity: 0.8;
+      margin-top: 10px;
       padding-top: 10px;
+      border-top: 1px solid rgba(255,255,255,0.2);
     }
   </style>
 </head>
 <body>
-  <h3>Simple Ad Blocker</h3>
+  <h2>Ad Blocker</h2>
   
   <div class="switch-container">
+    <div class="switch-info">
+      <span id="status-text" class="status-text">Loading...</span>
+      <span style="font-size: 12px; opacity: 0.8;" id="current-domain">Domain</span>
+    </div>
     <label class="switch">
       <input type="checkbox" id="toggle">
       <span class="slider"></span>
     </label>
-    <span id="status-text" class="status-text">Loading...</span>
   </div>
 
-  <p class="note" id="note-text">Network requests to known ad servers are being blocked.</p>
+  <!-- Stats -->
+  <div class="stats-container">
+    <div class="stat-row">
+      <span class="stat-label">Blocked Today:</span>
+      <span class="stat-value" id="blocks-today">0</span>
+    </div>
+    <div class="stat-row">
+      <span class="stat-label">Blocked This Tab:</span>
+      <span class="stat-value" id="blocks-tab">0</span>
+    </div>
+    <div class="stat-row">
+      <span class="stat-label">Total Blocked:</span>
+      <span class="stat-value" id="blocks-total">0</span>
+    </div>
+  </div>
+
+  <!-- Blocking Level -->
+  <div class="level-container">
+    <div class="level-label">Blocking Level:</div>
+    <select id="level-select" class="level-select">
+      <option value="standard">Standard (Fast)</option>
+      <option value="aggressive">Aggressive (Thorough)</option>
+      <option value="custom">Custom</option>
+    </select>
+  </div>
+
+  <!-- Whitelist -->
+  <div class="whitelist-container">
+    <button class="btn btn-whitelist" id="whitelist-btn">Whitelist This Site</button>
+    <button class="btn btn-reset" id="reset-stats-btn">Reset Stats</button>
+    <button class="btn btn-import" id="auto-update-btn">Auto-Update Rules</button>
+  </div>
+
+  <div class="whitelist-list" id="whitelist-list" style="display: none;">
+    <div id="whitelist-items"></div>
+  </div>
+
+  <p class="note" id="note-text">Blocking ad networks in real-time...</p>
 
   <script src="popup.js"></script>
 </body>
